Work on Formula page, added some UI elements

--- a/RocketryMath/Views/Home/Contact.cshtml
+++ b/RocketryMath/Views/Home/Contact.cshtml
@@ -1,17 +1,17 @@
-﻿@{
+﻿<!-- © 2017 Chris Wilson. All rights reserved. -->
+
+@{
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<p>
+    <a href="https://github.com/ChristopherRWilson/RocketryMath" class="btn btn-info btn-lg"><i class="fa fa-github" aria-hidden="true"></i> Follow us on GitHub</a>
+</p>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<p>
+    <address>
+        <strong>General:</strong>   <a href="mailto:chris@ocmit">chris@ocmit.com</a><br />
+    </address>
+</p>
