--- a/RocketryMath/Views/Formula/Solve.cshtml
+++ b/RocketryMath/Views/Formula/Solve.cshtml
@@ -1,16 +1,17 @@
 ﻿<!-- © 2017 Chris Wilson. All rights reserved. -->
 
 @model RocketryMath.Interfaces.IFormula
-S
+
 <h1 class="formulaH1">@Model.FormulaName()</h1>
 @Html.Raw(Model.FormulaDescription())
 <br />
 <div class="container-fluid">
     <div class="row">
-        @using (Html.BeginForm("Solved", "Formula"))
+        @using (Html.BeginForm("Solved", "Formula", FormMethod.Get))
         {
             <div class="col-lg-7">
                 @Html.EditorFor(x => x.VariableList)
+
                 <button type="submit" class="btn btn-lg btn-success" id="submit"><i class="fa fa-check" aria-hidden="true"></i> Solve This</button>
                 <button type="submit" class="btn btn-lg btn-warning" id="submit"><i class="fa fa-remove" aria-hidden="true"></i> Clear values</button>
             </div>
