--- a/RocketryMath/Views/Shared/_Layout.cshtml
+++ b/RocketryMath/Views/Shared/_Layout.cshtml
@@ -1,115 +1,119 @@
 ﻿<!-- © 2017 Chris Wilson. All rights reserved. -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/bundles/fontawesome")
     @Scripts.Render("~/bundles/modernizr")
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink(" RocketryMath", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
+    @Html.Partial("_Navigation")
+    <!-- Page Content -->
+    <div class="container">
+        <div class="row">
+            @Html.Partial("_SideNavigation")
+        <div class="col-md-9 body-content">
+            @RenderBody()
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Chris Wilson</p>
-        </footer>
-    </div>
-
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config(
-        {
-        displayAlign: "center",
-        extensions: ["tex2jax.js"],
-        menuSettings:
-        {
-        zoom: "Click",
-        CTRL: false,
-        ALT: false,
-        CMD: false,
-        Shift: false,
-        zscale: "250%",
-        font: "Auto",
-        context: "MathJax",
-        mpContext: false,
-        mpMouse: false,
-        texHints: true
-        },
-        TeX:
-        {
-        Macros:
-        {
-        RR: '{\\bf R}',
-        bold: ['{\\bf #1}', 1]
-        }
-        },
-        errorSettings:
-        {
-        message: ["[", ["MathProcessingError", "Math Processing Error"], "]"],
-        style: {
-        color: "#CC0000",
-        "font-style": "italic"
-        }
-        },
-        jax: ["input/TeX", "output/SVG"],
-        tex2jax:
-        {
-        inlineMath:
-        [
-        ['$', '$'],
-        ['\\(', '\\)']
-        ],
-        displayMath:
-        [
-        ['$$', '$$'],
-        ['\\[', '\\]']
-        ],
-        preview: ["[math]"],
-        processEscapes: true
-        },
-        "SVG":
-        {
-        blacker: 10,
-        font: "TeX",
-        scale: 100,
-        },
-        MathMenu:
-        {
-        delay: 150,
-        helpURL: "http://www.mathjax.org/help-v2/user/",
-        showRenderer: true,
-        showMathPlayer: true,
-        showFontMenu: true,
-        showContext: false,
-        showDiscoverable: true,
-        }
-        });
-    </script>
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/mathjax")
-    @RenderSection("scripts", required: false)
+</div>
+<!-- /.container -->
+<div class="container">
+    <hr>
+    <!-- Footer -->
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy; Your Website 2017</p>
+            </div>
+        </div>
+    </footer>
+</div>
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config(
+    {
+    displayAlign: "center",
+    extensions: ["tex2jax.js"],
+    menuSettings:
+    {
+    zoom: "Click",
+    CTRL: false,
+    ALT: false,
+    CMD: false,
+    Shift: false,
+    zscale: "250%",
+    font: "Auto",
+    context: "MathJax",
+    mpContext: false,
+    mpMouse: false,
+    texHints: true
+    },
+    TeX:
+    {
+    Macros:
+    {
+    RR: '{\\bf R}',
+    bold: ['{\\bf #1}', 1]
+    }
+    },
+    errorSettings:
+    {
+    message: ["[", ["MathProcessingError", "Math Processing Error"], "]"],
+    style: {
+    color: "#CC0000",
+    "font-style": "italic"
+    }
+    },
+    jax: ["input/TeX", "output/SVG"],
+    tex2jax:
+    {
+    inlineMath:
+    [
+    ['$', '$'],
+    ['\\(', '\\)']
+    ],
+    displayMath:
+    [
+    ['$$', '$$'],
+    ['\\[', '\\]']
+    ],
+    preview: ["[math]"],
+    processEscapes: true
+    },
+    "SVG":
+    {
+    blacker: 10,
+    font: "TeX",
+    scale: 100,
+    },
+    MathMenu:
+    {
+    delay: 150,
+    helpURL: "http://www.mathjax.org/help-v2/user/",
+    showRenderer: true,
+    showMathPlayer: true,
+    showFontMenu: true,
+    showContext: false,
+    showDiscoverable: true,
+    }
+    });
+</script>
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@Scripts.Render("~/bundles/mathjax")
+@RenderSection("scripts", required: false)
 </body>
 </html>
