--- a/RocketryMath/Views/Formula/Solve.cshtml
+++ b/RocketryMath/Views/Formula/Solve.cshtml
@@ -7,10 +7,19 @@
 <br />
 <div class="container-fluid">
     <div class="row">
-        @using (Html.BeginForm("Solved", "Formula", FormMethod.Get))
+        @using (Html.form.BeginForm("Solved", "Formula", FormMethod.Post))
         {
+            @Html.HiddenFor(m => m.GetType().AssemblyQualifiedName)
+
             <div class="col-lg-7">
                 @Html.EditorFor(x => x.VariableList)
+
+                @*@foreach (var item in Model.VariableList)
+                    {
+                        Html.RenderPartial("VariableEditor", item);
+                    }*@
+
+                <hr />
 
                 <button type="submit" class="btn btn-lg btn-success" id="submit"><i class="fa fa-check" aria-hidden="true"></i> Solve This</button>
                 <button type="submit" class="btn btn-lg btn-warning" id="submit"><i class="fa fa-remove" aria-hidden="true"></i> Clear values</button>
